@@ -1,3 +1,11 @@
+2012-01-23  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/normal/crypto.c (grub_crypto_autoload): Prevent
+	infinite recursion using counter.
+	* grub-core/lib/xzembed/xz_dec_stream.c (xz_dec_init): Defer s->crc32
+	init to skip it if the magic check fails.
+	(dec_stream_header): Init s->crc32.
+
 2012-01-22  Vladimir Serbinenko  <phcoder@gmail.com>
 2012-01-22  Zachary Bedell <pendorbound@gmail.com>
 2012-01-22  Richard Laager <rlaager@wiktel.com>
